--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StaticWebApp02 on GitHub</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
+    <style></style>
 </head>
 <body>
-    StaticWebApp02 on GitHub adsadasdagddsfdsfdsfdsfdsa
-    fdsfdsffsdfasdfafs
-
-    dasdasfsdfdsfdsafasfa
-    faffsdfsafdfadfasdfadfasdfasdfasdf
     
 </body>
 </html>
